Fix `z-index` for footer so it's not appear above of date picker

--- a/src/less/site.less
+++ b/src/less/site.less
@@ -24,7 +24,6 @@ body {
   /* Set the fixed height of the footer here */
   height: 65px;
   background-color: #f5f5f5;
-  z-index: 100;
 }
 
 
